--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -42,6 +42,26 @@
     background-color: transparent;
 }
 
+.bg-color-gray {
+    background-color: gray;
+}
+
+.d-block {
+    display: block;
+}
+
+.mb-120 {
+    margin-bottom: 120px;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
+}
+
+.mt-120 {
+    margin-top: 120px;
+}
+
 /* GRID */
 
 .col-12 {
