--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
 .logo {
     width: 70px;
     height: 70px;
-    margin: 0 7.5px;
+    /* margin: 0 7.5px; */
 }
 
 .header ul li a {
@@ -41,6 +41,23 @@
     color: #75dab4;
     font-size: 1.2rem;
     font-weight: bold;
+}
+
+.fixed-header {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    left: 0;
+    padding: 0.5rem 0;
+    background-color: black;
+    color: black;
+    border-bottom: 1px solid transparent;
+    background: black;
+    border-color: transparent;
+    -webkit-box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
+    padding: 0;
+    z-index: 1;
 }
 
 /* FIN HEADER */
@@ -413,7 +430,7 @@ h2{
     font-size: 1.2rem;
 }
 
-
+/* BLOG */
 
 .container-blog {
     margin: 75px 0;
@@ -466,3 +483,93 @@ h2{
     display:block;
     height: auto;
 }
+
+/* FIN BLOG */
+
+/* CONTACT */
+
+.input-container {
+    padding: 20px 0;
+    margin: 5px;
+    width: 100%;
+    /* background-color: #39A2DB; */
+    border-bottom: 1px solid gray;
+}
+
+.input-contact{
+    width: 100%;
+    display: inline-block;
+    border: 0;
+    outline: none;
+    
+}
+
+.contact-button {
+    width: 100px;
+    background-color: #EDEDED;
+    border: 1px solid #EDEDED;
+    padding: 10px 5px;
+    width: 50px;
+    height: 39px;
+    overflow: visible;
+    box-sizing: border-box;
+}
+
+.contact-button-container {
+    width: 100px;
+    padding: 10px 5px;
+    width: 139px;
+    height: 39px;
+    overflow: visible;
+    box-sizing: border-box;
+}
+
+.simple-btn {
+    height: 50px;
+    position: relative;
+    padding: 7px;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 13px;
+    font-weight: 300; 
+    background-color: transparent;
+    border: 1px solid transparent;
+}
+.simple-btn:after {
+    content: '';
+    width: 45%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.07);
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+
+/* FIN CONTACT */
+
+/* FOOTER */
+
+.left-footer-container {
+    width: 100%;
+    /* height: 500px; */
+    background-color: #151921;
+
+}
+
+.right-footer-container {
+    width: 100%;
+    background-color: #0C0F16;
+
+}
+
+.left-footer-container h3 {
+    color: white;
+}
+
+.right-footer-container h3 {
+    color: white;
+}
+
+/* FIN FOOTER */
