--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -58,6 +58,14 @@
     margin-bottom: 1rem;
 }
 
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
 .mt-120 {
     margin-top: 120px;
 }
