--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@
     text-align:end;
 }
 
-.header ul li a.active {
+.header ul li a.item-active {
     color: #75dab4;
     font-size: 1.2rem;
     font-weight: bold;
@@ -59,6 +59,86 @@
     padding: 0;
     z-index: 1;
 }
+
+.icono-menu {
+    display: none;
+}
+
+@media (max-width: 1100px) {
+    
+/* Estilos para el ícono del Menú  */
+.icono-menu{
+    /* margin: 40px; */
+    display: block;
+    position: absolute;
+    right: 40px;
+    top: 0;
+    z-index: 10;
+}
+
+/* Estilos para el contenedor del menu */
+.cont-menu{
+    box-sizing: border-box;
+    flex-direction: column;
+    background-color: rgb(42, 42, 42);
+    box-shadow: 2px 0px 5px 2px rgb(66, 66, 66);
+    width: 80vw;
+    height: 100vh;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    transition: all .5s ease;
+    text-align: center !important;
+    justify-content: start !important;
+    color: white !important;
+    box-sizing: border-box;
+    transform: scale(0);
+}
+
+/* Estilos para agregar en JavaScript */
+.active{
+    transform: scale(1);
+}
+
+.opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .5s ease;
+}
+
+/* Estilos para el listado del menú */
+.header ul{
+    padding: 100px 0px 20px 0px;
+    list-style: none;
+}
+
+
+
+.header ul li{
+    display: block;
+    font-size: 1.3rem;
+    text-decoration: none;
+    padding: 10px 0;
+    cursor: pointer;
+    color: white;
+}
+.header ul li:hover{
+    width: 100%;
+    background-color: gainsboro;
+    color:#75dab4;
+    z-index: 3;
+}
+
+.header ul li a {
+    color: white;
+    text-align: center !important;
+}
+
+/* .header ul li a:hover{
+    color:#75dab4
+} */
+
+
+  }
 
 /* FIN HEADER */
 
