--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,6 +475,7 @@
     border: none;
     border-radius: 5px;
     align-self: center;
+    inline
 }
 
 .icon-git {
@@ -485,6 +486,21 @@
     /* background: rgba(255, 255, 255, 0.25); */
     border-radius: 25%;
 }
+
+.technologies-list {
+    display: flex;
+    justify-content: center; /* Centra los iconos horizontalmente */
+    align-items: center; /* Centra los iconos verticalmente */
+    padding: 10px;
+    gap: 5px; /* Espacio entre los iconos, ajustable según necesidad */
+}
+
+.technology-icon {
+    width: auto; /* Tamaño reducido de los iconos */
+    height: 55px; /* Altura automática para mantener la proporción */
+    display: inline-block; /* Asegura que el ícono se maneje como bloque inline */
+}
+
 
 p{
     margin-bottom: 20px;
